# smsllm

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
smsllm/: __init__.py  buffer.py  cli.py  config.py  db.py  dispatch.py  formatting.py  limits.py  main.py  models.py  twilio_client.py  worker.py
smsllm/llm/: __init__.py  anthropic.py  base.py  gemini.py  openai_compat.py  registry.py
tests/: conftest.py  test_adapters.py  test_buffer.py  test_dispatch.py  test_formatting.py  test_limits.py  test_webhook.py
