[project]
name = "smsllm"
version = "0.1.0"
description = "Converse with an LLM over SMS via Twilio"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.0",
    "twilio>=9.0",
    "httpx2",
    "python-multipart>=0.0.32",
]

[project.scripts]
smsllm = "smsllm.cli:main"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["smsllm"]
